# Homework_s1

./: .gitignore  CMakeLists.txt  main.cpp
Homework 1/Task 1/: mapping.cpp  mapping.h
Homework 1/Task 2/: quad_solve.cpp  quad_solve.h
Homework 1/Task 3/: ring.cpp  ring.h
Homework 2/Task 0/: arithmetic_mean.cpp  arithmetic_mean.h
Homework 2/Task 1/: stars_triangle.cpp  stars_triangle.h
Homework 2/Task 2/: isosceles_triangle.cpp  isosceles_triangle.h
Homework 2/Task 3/: diamond_stars.cpp  diamond_stars.h
Homework 2/Task 4/: several_diamonds_stars.cpp  several_diamonds_stars.h
Homework 2/Task 5/: checkered_diamond_stars.cpp  checkered_diamond_stars.h
Homework 2/Task 6/: hollow_diamond_stars.cpp  hollow_diamond_stars.h
Homework 2/Task 7/: graphics_drawer.cpp  graphics_drawer.h
Homework 3/Task 1/: harmonic_sum.cpp  harmonic_sum.h
Homework 3/Task 2/: sum_powers_two.cpp  sum_powers_two.h
Homework 3/Task 3/: sin_sum.cpp  sin_sum.h
Homework 3/Task 4/: pi_value.cpp  pi_value.h
Homework 3/Task 5/: sine_approximation.cpp  sine_approximation.h
Homework 4/Task 1/: Bracket expression validation.cpp  Bracket expression validation.h
